; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_paramgrill.c_randomParams.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_paramgrill.c_randomParams.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@NUM_PARAMS = common dso_local global i64 0, align 8
@g_rand = common dso_local global i32 0, align 4
@rangetable = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @randomParams to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @randomParams() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = alloca i64, align 8
  store i64 0, i64* %2, align 8
  br label %3

3:                                                ; preds = %20, %0
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @NUM_PARAMS, align 8
  %6 = icmp ult i64 %4, %5
  br i1 %6, label %7, label %23

7:                                                ; preds = %3
  %8 = load i64, i64* %2, align 8
  %9 = call i32 @FUZ_rand(i32* @g_rand)
  %10 = load i32*, i32** @rangetable, align 8
  %11 = load i64, i64* %2, align 8
  %12 = getelementptr inbounds i32, i32* %10, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = srem i32 %9, %13
  %15 = call i32 @rangeMap(i64 %8, i32 %14)
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  %18 = load i64, i64* %2, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  store i32 %15, i32* %19, align 4
  br label %20

20:                                               ; preds = %7
  %21 = load i64, i64* %2, align 8
  %22 = add i64 %21, 1
  store i64 %22, i64* %2, align 8
  br label %3

23:                                               ; preds = %3
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  ret i32* %25
}

declare dso_local i32 @rangeMap(i64, i32) #1

declare dso_local i32 @FUZ_rand(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
